fix to align icon in headers

--- a/less/availity-app-icons.less
+++ b/less/availity-app-icons.less
@@ -33,6 +33,13 @@
   );
 }
 
+h1{
+  > .app-icon{
+    margin-top: -18px;
+    margin-right: 20px;
+  }
+}
+
 // app icons
 .app-icon {
   position: relative;
